--- a/PracticaListaCompleta/app/src/main/AndroidManifest.xml
+++ b/PracticaListaCompleta/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticaListaCompleta">
         <activity
-            android:name=".PersonDetailActivity"
+            android:name=".ui.activities.PersonDetailActivity"
             android:exported="false"
             android:label="@string/title_activity_person_detail"
             android:theme="@style/Theme.PracticaListaCompleta" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PracticaListaCompleta">
