--- a/PracticaMapas/app/src/main/AndroidManifest.xml
+++ b/PracticaMapas/app/src/main/AndroidManifest.xml
@@ -20,11 +20,7 @@
             android:exported="true"
             android:label="@string/title_activity_location"
             android:theme="@style/Theme.PracticaMapas">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
@@ -34,7 +30,17 @@
             android:theme="@style/Theme.PracticaMapas">
 
         </activity>
+        <activity
+            android:name=".MapCenterActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.PracticaMapas">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
